# kmenuedit

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  basictab.cpp  basictab.h  configurationmanager.cpp  configurationmanager.h  globalaccel.cpp  globalaccel.h  khotkeys.cpp  khotkeys.h  klinespellchecking.cpp  klinespellchecking.h  kmenuedit.cpp  kmenuedit.desktop  kmenuedit.h  kmenueditui.rc  main.cpp  menufile.cpp  menufile.h  menuinfo.cpp  menuinfo.h  org.kde.kmenuedit.appdata.xml  org.kde.kmenuedit.desktop  preferencesdlg.cpp  preferencesdlg.h  treeview.cpp  treeview.h
doc/: CMakeLists.txt  index.docbook
kconf_update/: CMakeLists.txt  globalaccel.cpp  globalaccel.upd
pixmaps/: CMakeLists.txt
po/af/: kmenuedit.po
po/ar/: kmenuedit.po
po/ast/: kmenuedit.po
po/az/: kmenuedit.po
po/be/: kmenuedit.po
po/bg/: kmenuedit.po
po/bn/: kmenuedit.po
po/bn_IN/: kmenuedit.po
po/br/: kmenuedit.po
po/bs/: kmenuedit.po
po/ca/: kmenuedit.po
po/ca/docs/kmenuedit/: index.docbook
po/ca@valencia/: kmenuedit.po
po/cs/: kmenuedit.po
po/csb/: kmenuedit.po
po/cy/: kmenuedit.po
po/da/: kmenuedit.po
po/de/: kmenuedit.po
po/el/: kmenuedit.po
po/en_GB/: kmenuedit.po
po/eo/: kmenuedit.po
po/es/: kmenuedit.po
po/es/docs/kmenuedit/: index.docbook
po/et/: kmenuedit.po
po/eu/: kmenuedit.po
po/fa/: kmenuedit.po
po/fi/: kmenuedit.po
po/fr/: kmenuedit.po
po/fr/docs/kmenuedit/: index.docbook
po/fy/: kmenuedit.po
po/ga/: kmenuedit.po
po/gl/: kmenuedit.po
po/gu/: kmenuedit.po
po/he/: kmenuedit.po
po/hi/: kmenuedit.po
po/hne/: kmenuedit.po
po/hr/: kmenuedit.po
po/hsb/: kmenuedit.po
po/hu/: kmenuedit.po
po/ia/: kmenuedit.po
po/id/: kmenuedit.po
po/is/: kmenuedit.po
po/it/: kmenuedit.po
po/ja/: kmenuedit.po
po/ka/: kmenuedit.po
po/kk/: kmenuedit.po
po/km/: kmenuedit.po
po/kn/: kmenuedit.po
po/ko/: kmenuedit.po
po/ku/: kmenuedit.po
po/lt/: kmenuedit.po
po/lv/: kmenuedit.po
po/mai/: kmenuedit.po
po/mk/: kmenuedit.po
po/ml/: kmenuedit.po
po/mr/: kmenuedit.po
po/ms/: kmenuedit.po
po/nb/: kmenuedit.po
po/nds/: kmenuedit.po
po/ne/: kmenuedit.po
po/nl/: kmenuedit.po
po/nn/: kmenuedit.po
po/oc/: kmenuedit.po
po/or/: kmenuedit.po
po/pa/: kmenuedit.po
po/pl/: kmenuedit.po
po/pt/: kmenuedit.po
po/pt_BR/: kmenuedit.po
po/ro/: kmenuedit.po
po/ru/: kmenuedit.po
po/sa/: kmenuedit.po
po/se/: kmenuedit.po
po/si/: kmenuedit.po
po/sk/: kmenuedit.po
po/sl/: kmenuedit.po
po/sl/docs/kmenuedit/: index.docbook
po/sq/: kmenuedit.po
po/sr/: kmenuedit.po
po/sr@ijekavian/: kmenuedit.po
po/sr@ijekavianlatin/: kmenuedit.po
po/sr@latin/: kmenuedit.po
po/sv/: kmenuedit.po
po/sv/docs/kmenuedit/: index.docbook
po/ta/: kmenuedit.po
po/te/: kmenuedit.po
po/tg/: kmenuedit.po
po/th/: kmenuedit.po
po/tr/: kmenuedit.po
po/tr/docs/kmenuedit/: index.docbook
po/ug/: kmenuedit.po
po/uk/: kmenuedit.po
po/uk/docs/kmenuedit/: index.docbook
po/uz/: kmenuedit.po
po/uz@cyrillic/: kmenuedit.po
po/vi/: kmenuedit.po
po/wa/: kmenuedit.po
po/xh/: kmenuedit.po
po/zh_CN/: kmenuedit.po
po/zh_TW/: kmenuedit.po
